--- a/templates/alert.html
+++ b/templates/alert.html
@@ -1,4 +1,4 @@
-{% extends 'baseforalert.html' %}
+{% extends 'layout.html' %}
 {% block title %}Alert{% endblock %}
 {% block head %}
 {% endblock %}
