--- a/templates/add.html
+++ b/templates/add.html
@@ -1,58 +1,169 @@
 {% extends 'layout.html' %}
 {% block title %}Real-Time Charts{% endblock %}
 {% block head %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename='js/alert.js') }}"></script>
 {% endblock %}
 {% block content %}
-
 
 <div id="container" style="background-color:white"></div>
 <!-- Tab content -->
 <!-- container -->
 <div class="card">
+  <div class="card-header bg-primary bg-gradient text-white">Add Machine</div>
     <div class="card-body">
-        <form>
-            <div class="form-row">
+        <form action="{{ url_for('add') }}" method='POST'>
+            <div class="row mb-4">
               <div class="form-group col-md-4">
                 <label for="inputPhase">Phase</label>
-                <select id="inputPhase" class="form-control">
+                <select id="inputPhase" name="inputPhase" class="form-control">
                   <option value="" disabled selected>Choose Phase</option>
-                  <option value="Phase4">Phase4</option>
-                  <option value="Phase5">Phase5</option>
-                  <option value="Phase9">Phase9</option>
+                  <option value="Phase 4">Phase4</option>
+                  <option value="Phase 5">Phase5</option>
+                  <option value="Phase 9">Phase9</option>
                 </select>
               </div>
-              <div class="form-group col-md-5">
-                <label for="inputname">Name of Machine</label>
-                <input type="text" class="form-control" id="inputname">
+              <div class="form-group col-md-4">
+                <label for="inputnameM">Name of Machine</label>
+                <input type="text" class="form-control" id="inputnameM" name="inputnameM">
               </div>
             </div>
             <button type="submit" class="btn btn-primary">Add</button>
-          </form>
+        </form>
     </div>
-  </div>
-
-<!-- End container -->
-<!-- Toasts -->
-<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-  <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header bg-danger bg-gradient text-white ">
-      <!-- <img src="..." class="rounded me-2" alt="..."> -->
-      <i class='fas fa-exclamation-triangle'></i>&nbsp
-      <strong class="me-auto">Alert</strong>
-      <small id="timealert"></small>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body bg-danger text-white ">
-      <div id="AlertId"></div>
-    </div>
-  </div>
 </div>
-<!--End Toasts -->
+<!--<div class="card">
+  <div class="card-header bg-danger bg-gradient text-white">delete Machine</div>
+    <div class="card-body">
+        <form action="{{ url_for('delete') }}" method='POST'>
+            <div class="row mb-4">
+              <div class="form-group col-md-4">
+                <label for="delPhase">Phase</label>
+                <select id="delPhase" name="delPhase" class="form-control">
+                  <option value="" disabled selected>Choose Phase</option>
+                  <option value="4">Phase4</option>
+                  <option value="5">Phase5</option>
+                  <option value="9">Phase9</option>
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="delnameM">Name of Machine</label>
+                <input type="text" class="form-control" id="delnameM" name="delnameM">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+    </div>
+</div>-->
+<div class="card mt-3">
+  <div class="card-header bg-danger bg-gradient text-white">Delete Machine</div>
+    <div class="card-body">
+      <table class="table align-middle mb-0 bg-white">
+        <thead class="bg-light">
+          <tr>
+            <th>IP</th>
+            <th>Host</th>
+            <th>Station</th>
+            <th>Phase</th>
+            <th>Name</th>
+            <th>Slot water</th>
+            <th>Slot Temp</th>
+            <th>Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <div class="d-flex align-items-center">
+                <p class="fw-bold mb-1">192.168.1.1</p>
+              </div>
+            </td>
+            <td>
+              <p class="text-muted mb-0">B</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">OP2</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">Phsae4</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">Fisa 4</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">5</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">6</p>
+            </td>
+            <td>
+              <button type="button" class="btn btn-link btn-sm text-bg-danger">
+                Delete
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="d-flex align-items-center">
+                <p class="fw-bold mb-1">192.168.1.2</p>
+              </div>
+            </td>
+            <td>
+              <p class="text-muted mb-0">C</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">OP2</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">Phsae4</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">Fisa 2</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">1</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">2</p>
+            </td>
+            <td>
+              <button type="button" class="btn btn-link btn-sm text-bg-danger">
+                Delete
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="d-flex align-items-center">
+                <p class="fw-bold mb-1">192.168.1.3</p>
+              </div>
+            </td>
+            <td>
+              <p class="text-muted mb-0">A</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">OP2</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">Phsae4</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">Robot</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">3</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0">4</p>
+            </td>
+            <td>
+              <button type="button" class="btn btn-link btn-sm text-bg-danger">
+                Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+</div>
 
  <!-- End Tab content -->
 
