--- a/templates/baseforalert.html
+++ b/templates/baseforalert.html
@@ -77,16 +77,35 @@
           border-0 border-bottom bg-dark bg-gradient text-white"
             ><i class="bi-solid bi-display fa-fw me-3"></i><span>Live Monitor</span>
           </a>
+          
+          {% if current_user.is_authenticated %}
+          <a 
+          class="list-group-item list-group-item-action py-2 ripple 
+          border-0 border-bottom bg-dark bg-gradient text-white"
+          id="add"
+          data-mdb-toggle="tab"
+          href="add"
+          aria-selected="true"
+            ><i class="bi bi-node-plus-fill fa-fw me-3"></i><span>Add</span>
+          </a>
+          {% endif %}
           <a href="alert" class="list-group-item list-group-item-action py-2 ripple 
           border-0 border-bottom bg-dark bg-gradient text-white"
             ><i class="fa-solid fa-bell fa-fw me-3"></i><span>Alert Status</span>
           </a>
           {% if current_user.is_authenticated %}
-          <a href="add" class="list-group-item list-group-item-action py-2 ripple 
-          border-0 border-bottom bg-dark bg-gradient text-white"
-            ><i class="fa-solid fa-bell fa-fw me-3"></i><span>Add</span>
+          <a href="logout" class="list-group-item list-group-item-action py-2 ripple 
+          border-0 border-bottom bg-dark bg-gradient text-white "style="margin-top: 200%;"
+            ><i class="bi-solid bi-door-open-fill fa-fw me-3"></i><span>Logout</span>
           </a>
+          {% else %}
+          <!-- Button trigger modal -->
+          <button type="button" class="list-group-item list-group-item-action py-2 ripple 
+          border-0 border-bottom bg-dark bg-gradient text-white" id="loginbutton" data-mdb-toggle="modal" data-mdb-target="#exampleModal" style="margin-top: 220%;">
+            <i class="bi-solid bi-door-open-fill fa-fw me-3"></i><span>Login</span>
+          </button>
           {% endif %}
+          </div>
         </div>
       </div>
     </nav>
