--- a/templates/loginform.html
+++ b/templates/loginform.html
@@ -27,13 +27,13 @@
               <form action="{{ url_for('login') }}" method='POST'>
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type='text' name='username' id='username' class="form-control" />
+                  <input type='text' name='username' id='username' class="form-control border-bottom border-4 rounded-0" />
                   <label class="form-label" for="loginName">Username</label>
                 </div>
 
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type='password' name='password' id='password' class="form-control" />
+                  <input type='password' name='password' id='password' class="form-control border-bottom border-4 rounded-0" />
                   <label class="form-label" for="loginPassword">Password</label>
                 </div>
 
@@ -45,25 +45,25 @@
               <form>
                 <!-- Name input -->
                 <div class="form-outline mb-4">
-                  <input type="text" id="registerName" class="form-control" />
+                  <input type="text" id="registerName" class="form-control border-bottom border-4 rounded-0" />
                   <label class="form-label" for="registerName">Name</label>
                 </div>
 
                 <!-- Username input -->
                 <div class="form-outline mb-4">
-                  <input type="text" id="registerUsername" class="form-control" />
+                  <input type="text" id="registerUsername" class="form-control border-bottom border-4 rounded-0" />
                   <label class="form-label" for="registerUsername">Username</label>
                 </div>
 
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="registerPassword" class="form-control" />
+                  <input type="password" id="registerPassword" class="form-control border-bottom border-4 rounded-0" />
                   <label class="form-label" for="registerPassword">Password</label>
                 </div>
 
                 <!-- Repeat Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="registerRepeatPassword" class="form-control" />
+                  <input type="password" id="registerRepeatPassword" class="form-control border-bottom border-4 rounded-0" />
                   <label class="form-label" for="registerRepeatPassword">Repeat password</label>
                 </div>
 
