--- a/templates/add.html
+++ b/templates/add.html
@@ -1,6 +1,11 @@
 {% extends 'layout.html' %}
-{% block title %}Real-Time Charts{% endblock %}
+{% block title %}Add-Machine{% endblock %}
 {% block head %}
+<!-- script pagination -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<!-- css pagination -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
 {% endblock %}
 {% block content %}
 
@@ -8,159 +13,176 @@
 <!-- Tab content -->
 <!-- container -->
 <div class="card">
-  <div class="card-header bg-primary bg-gradient text-white">Add Machine</div>
+  <div class="card-header bg-dark bg-gradient text-white">Add Machine</div>
     <div class="card-body">
-        <form action="{{ url_for('add') }}" method='POST'>
+        <form action="{{ url_for('addmachine') }}" method='POST'>
             <div class="row mb-4">
               <div class="form-group col-md-4">
-                <label for="inputPhase">Phase</label>
-                <select id="inputPhase" name="inputPhase" class="form-control">
-                  <option value="" disabled selected>Choose Phase</option>
-                  <option value="Phase 4">Phase4</option>
-                  <option value="Phase 5">Phase5</option>
-                  <option value="Phase 9">Phase9</option>
+                <label for="MachineId">Machine ID</label>
+                <input type="text" class="form-control" id="MachineId" name="MachineId">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="MachineIp">IP</label>
+                <input type="text" class="form-control" id="MachineIp" name="MachineIp">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="MachinePort">Port</label>
+                <input type="text" class="form-control" id="MachinePort" name="MachinePort">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputOpMac">Station</label>
+                <select id="inputOpMac" name="inputOpMac" class="form-control inputOP">
+                  <option value="" disabled selected>Choose Station</option>
+                  <!--<option value="OP2">2</option>-->
                 </select>
               </div>
               <div class="form-group col-md-4">
-                <label for="inputnameM">Name of Machine</label>
-                <input type="text" class="form-control" id="inputnameM" name="inputnameM">
+                <label for="inputPhaseMac">Phase</label>
+                <select id="inputPhaseMac" name="inputPhaseMac" class="form-control inputPhase">
+                  <option value="" disabled selected>Choose Phase</option>
+                  <!--<option value="OP2">2</option>-->
+                </select>
               </div>
             </div>
+            <input type="hidden" value="machine" name="add">
             <button type="submit" class="btn btn-primary">Add</button>
         </form>
     </div>
 </div>
-<!--<div class="card">
-  <div class="card-header bg-danger bg-gradient text-white">delete Machine</div>
+<div class="card mt-3">
+  <div class="card-header bg-dark bg-gradient text-white">Add Device</div>
     <div class="card-body">
-        <form action="{{ url_for('delete') }}" method='POST'>
+        <form action="{{ url_for('addmachine') }}" method='POST'>
             <div class="row mb-4">
               <div class="form-group col-md-4">
-                <label for="delPhase">Phase</label>
-                <select id="delPhase" name="delPhase" class="form-control">
-                  <option value="" disabled selected>Choose Phase</option>
-                  <option value="4">Phase4</option>
-                  <option value="5">Phase5</option>
-                  <option value="9">Phase9</option>
+                <label for="inputOP">Station</label>
+                <select id="inputOP" name="inputOP" class="form-control inputOP">
+                  <option value="" disabled selected>Choose Station</option>
+                  <!--<option value="OP2">2</option>-->
                 </select>
               </div>
               <div class="form-group col-md-4">
-                <label for="delnameM">Name of Machine</label>
-                <input type="text" class="form-control" id="delnameM" name="delnameM">
+                <label for="inputPhase">Phase</label>
+                <select id="inputPhase" name="inputPhase" class="form-control inputPhase">
+                  <option value="" disabled selected>Choose Phase</option>
+                  <!--<option value="Phase 9">Phase 9</option>-->
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputMachineID">Machine ID</label>
+                <select id="inputMachineID" name="inputMachineID" class="form-control">
+                  <option value="" disabled selected>Choose Machine ID</option>
+                  <!--<option value="001">001</option>-->
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputSite">Site</label>
+                <select id="inputSite" name="inputSite" class="form-control">
+                  <option value="" disabled selected>Choose Site</option>
+                  <!--<option value=Fisa2>Fisa2</option>-->
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="Water">Slot water</label>
+                <select id="Water" name="Water" class="form-control">
+                  <option value="" disabled selected>Choose Slot Water</option>
+                  <!--<option value=1>1</option>-->
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="Slot_temp">Slot temperature</label>
+                <select id="Slot_temp" name="Slot_temp" class="form-control">
+                  <option value="" disabled selected>Choose Slot Temp</option>
+                  <!--<option value=1>1</option>-->
+                </select>
               </div>
             </div>
-            <button type="submit" class="btn btn-danger">Delete</button>
+            <input type="hidden" value="device" name="add" id="device">
+            <button type="submit" class="btn btn-primary">Add</button>
         </form>
     </div>
-</div>-->
+</div>
+<div class="card mt-3">
+  <div class="card-header bg-dark bg-gradient text-white">Add Station Phase and Site</div>
+    <div class="card-body">
+        <form action="{{ url_for('addmachine') }}" method='POST'>
+            <div class="row mb-4">
+              <div class="form-group col-md-4">
+                <label for="OPadd">OP</label>
+                <input type="text" class="form-control" id="OPadd" name="OPadd">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="Phaseadd">Phase</label>
+                <input type="text" class="form-control" id="Phaseadd" name="Phaseadd">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="Siteadd">Site</label>
+                <input type="text" class="form-control" id="Siteadd" name="Siteadd">
+              </div>
+            </div>
+            <input type="hidden" value="phase" name="add">
+            <button type="submit" class="btn btn-primary">Add</button>
+        </form>
+    </div>
+</div>
 <div class="card mt-3">
   <div class="card-header bg-danger bg-gradient text-white">Delete Machine</div>
     <div class="card-body">
-      <table class="table align-middle mb-0 bg-white">
+      <table class="display table align-middle mb-0 bg-white">
         <thead class="bg-light">
           <tr>
             <th>IP</th>
-            <th>Host</th>
+            <th>Port</th>
             <th>Station</th>
             <th>Phase</th>
-            <th>Name</th>
+            <th>Machine</th>
             <th>Slot water</th>
             <th>Slot Temp</th>
-            <th>Delete</th>
+            <th>Edit</th>
           </tr>
         </thead>
         <tbody>
+          {% for edit_delete in edit_delete %}
           <tr>
             <td>
               <div class="d-flex align-items-center">
-                <p class="fw-bold mb-1">192.168.1.1</p>
+                <p class="fw-bold mb-1">{{ edit_delete['Ip'] }}</p>
               </div>
             </td>
             <td>
-              <p class="text-muted mb-0">B</p>
+              <p class="text-muted mb-0">{{ edit_delete['Port'] }}</p>
             </td>
             <td>
-              <p class="text-muted mb-0">OP2</p>
+              <p class="text-muted mb-0">{{ edit_delete['Station'] }}</p>
             </td>
             <td>
-              <p class="text-muted mb-0">Phsae4</p>
+              <p class="text-muted mb-0">{{ edit_delete['Phase'] }}</p>
             </td>
             <td>
-              <p class="text-muted mb-0">Fisa 4</p>
+              <p class="text-muted mb-0">{{ edit_delete['Site'] }}</p>
             </td>
             <td>
-              <p class="text-muted mb-0">5</p>
+              <p class="text-muted mb-0">{{ edit_delete['Slot_Water'] }}</p>
             </td>
             <td>
-              <p class="text-muted mb-0">6</p>
+              <p class="text-muted mb-0">{{ edit_delete['Slot_Temp'] }}</p>
             </td>
             <td>
+              <button type="button" class="btn btn-link btn-sm text-bg-primary">
+                Edit
+              </button>
               <button type="button" class="btn btn-link btn-sm text-bg-danger">
                 Delete
               </button>
             </td>
           </tr>
-          <tr>
-            <td>
-              <div class="d-flex align-items-center">
-                <p class="fw-bold mb-1">192.168.1.2</p>
-              </div>
-            </td>
-            <td>
-              <p class="text-muted mb-0">C</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">OP2</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">Phsae4</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">Fisa 2</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">1</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">2</p>
-            </td>
-            <td>
-              <button type="button" class="btn btn-link btn-sm text-bg-danger">
-                Delete
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="d-flex align-items-center">
-                <p class="fw-bold mb-1">192.168.1.3</p>
-              </div>
-            </td>
-            <td>
-              <p class="text-muted mb-0">A</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">OP2</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">Phsae4</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">Robot</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">3</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">4</p>
-            </td>
-            <td>
-              <button type="button" class="btn btn-link btn-sm text-bg-danger">
-                Delete
-              </button>
-            </td>
-          </tr>
+          {% endfor %}
         </tbody>
+        <tfoot>
+          <tr>
+            <th>Machine</th>
+          </tr>
+      </tfoot>
       </table>
     </div>
 </div>
@@ -169,6 +191,142 @@
 
 {% endblock %}
 {% block script %}
+<script>
+  $(document).ready(function () {
+    $('table.display').DataTable({
+      pagingType: 'full_numbers',
+      scrollY: '200px',
+      scrollCollapse: true,
+      pageLength: 5,
+      lengthMenu: [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ],
+    });
+});
+</script>
+<!--Select Phase in Add Device-->
+<script>
+    "use strict";
+    var station = {{ station|default("")|tojson }};
 
+    var inputOP = $('select#inputOP');
+    var inputPhase = $('select#inputPhase');
 
+    for (var key in station) {
+      inputOP.append($('<option/>', {'value': key, 'text': key}));
+    }
+
+    inputOP.change(function(ev) {
+      inputPhase.empty();
+      inputPhase.append($('<option/>'));
+
+        var phase = station[inputOP.val()];
+
+        for (var i in phase) {
+          inputPhase.append($('<option/>', {'value': phase[i], 'text': phase[i]}));
+          console.log(phase[i])
+        }
+    });
+</script>
+<!--Select Phase in Add Machine-->
+<script>
+  "use strict";
+  var station = {{ station|default("")|tojson }};
+
+  var inputOPMac = $('select#inputOpMac');
+  var inputPhaseMac = $('select#inputPhaseMac');
+
+  for (var key in station) {
+    inputOPMac.append($('<option/>', {'value': key, 'text': key}));
+  }
+
+  inputOPMac.change(function(ev) {
+    inputPhaseMac.empty();
+    inputPhaseMac.append($('<option/>'));
+
+      var phaseMac = station[inputOPMac.val()];
+
+      for (var i in phaseMac) {
+        inputPhaseMac.append($('<option/>', {'value': phaseMac[i], 'text': phaseMac[i]}));
+      }
+  });
+</script>
+<!--Select Machine ID-->
+<script>
+  "use strict";
+  var machine_data = {{ machine_data|default("")|tojson }};
+
+  var inputPhase = $('select#inputPhase');
+  var inputMachineID = $('select#inputMachineID');
+
+  inputPhase.change(function(ev) {
+    inputMachineID.empty();
+    inputMachineID.append($('<option/>'));
+
+      var machine = machine_data[inputPhase.val()];
+
+      for (var i in machine) {
+        inputMachineID.append($('<option/>', {'value': machine[i], 'text': machine[i]}));
+      }
+  });
+</script>
+<!--Select Slot-->
+<script>
+  "use strict";
+  var slot = {{ slot|default("")|tojson }};
+
+  var Water = $('select#Water');
+  var Slot_temp = $('select#Slot_temp');
+
+  for (var i = 1; i < 15; i++) {
+    Water.append($('<option/>', {'value': i, 'text': i}));
+    Slot_temp.append($('<option/>', {'value': i, 'text': i}));
+  }
+
+  for (var key in slot) {
+    $('select').find('option[value="' + key +'"]').prop('disabled', true);
+  }
+
+  $('select').change(function(){
+    
+    var notAllowed = $(this).find('option:selected').data('notallowed');
+    var currentValue = $(this).val();
+    var oldValue = $(this).data('old');
+
+    $(this).data('old', currentValue);
+    if(oldValue) {
+      $('select').not(this).find('option[value="' + oldValue +'"]').prop('disabled', false);
+      
+      var previousNotAllowed = $(this).find('option[value="' + oldValue +'"]').data('notallowed');
+
+      if(previousNotAllowed){
+        $('select').not(this).find('option[value="' + previousNotAllowed +'"]').prop('disabled', false);
+      }
+    }
+    
+    if(notAllowed){
+      var items = $('select').not(this).find('option[value="' + notAllowed +'"]').prop('disabled',true);
+    }
+  
+  $('select').not(this).find('option[value="' + currentValue +'"]').prop('disabled', true);
+    
+ });
+</script>
+<!--Select Site-->
+<script>
+  "use strict";
+  var site = {{ site|default("")|tojson }};
+
+  var inputPhase = $('select#inputPhase');
+  var inputSite = $('select#inputSite');
+
+  inputPhase.change(function(ev) {
+    inputSite.empty();
+    inputSite.append($('<option/>'));
+
+      var machine = site[inputPhase.val()];
+
+      for (var i in machine) {
+        inputSite.append($('<option/>', {'value': machine[i], 'text': machine[i]}));
+      }
+  });
+</script>
 {% endblock %}
