--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,20 @@
 {% endblock %}
 {% block content %}
 
-<div class="select-wrapper">
-    <select id="selectionGP" class="select select-initialized">
-        <option value="" disabled selected>Choose Phase</option>
-        <option value="all">All</option>
-        <option value="P4">OP2 Phase 4</option>
-        <option value="P5">OP2 Phase 5</option>
-        <option value="P9">OP2 Phase 9</option>
-    </select>
-</div>
-
-<!-- Phase -->
+<div class="card">
+    <h5 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">Status Machine
+        <div class="select-wrapper mb-2 ">
+            <select id="selectionGP" class="select select-initialized">
+                <option value="" disabled selected>Choose Phase</option>
+                <option value="all">All</option>
+                <option value="P4">OP2 Phase 4</option>
+                <option value="P5">OP2 Phase 5</option>
+                <option value="P9">OP2 Phase 9</option>
+            </select>
+        </div>
+    </h5>
+    <div class="card-body">
+        <!-- Phase -->
 
         <div class="p-1 mb-2 bg-dark bg-gradient text-white">
             <h2 class="text-center m-0" id="Phase4"></h2>
@@ -32,6 +35,11 @@
         <div id="dataP9" class="display dataP9"></div>
 
 <!-- Phase end -->
+    </div>
+</div>
+
+
+
 {% endblock %}
 {% block script %}
 {% endblock %}
