--- a/templates/line.html
+++ b/templates/line.html
@@ -4,18 +4,252 @@
 <script src="{{ url_for('static', filename='js/line.js') }}"></script>
 {% endblock %}
 {% block content %}
-<div class="select-wrapper">
-    <select id="selectionGP" class="select select-initialized">
-        <option value="" disabled selected>Choose Phase</option>
-        <option value="all">All</option>
-        <option value="P4">OP2 Phase 4</option>
-        <option value="P5">OP2 Phase 5</option>
-        <option value="P9">OP2 Phase 9</option>
-    </select>
+
+<div class="card ">
+    <h5 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">
+      Overview Report Deionized water
+      <div class="select-wrapper">
+        <select id="selectionGP" class="select select-initialized">
+            <option value="" disabled selected>Choose Phase</option>
+            <option value="all">All</option>
+            <option value="P4">OP2 Phase 4</option>
+            <option value="P5">OP2 Phase 5</option>
+            <option value="P9">OP2 Phase 9</option>
+        </select>
+    </div>
+    </h5>
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <h6 class="card-header bg-dark bg-gradient text-white">Monthly Deionized water</h6>
+                <div id="linechartP4" class="display dataP4" style="height: 18rem;"></div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
+                <table class="display table align-middle mb-0 bg-white">
+                    <thead class="bg-light">
+                      <tr>
+                        <th>Date</th>
+                        <th>Phase</th>
+                        <th>Machine</th>
+                        <th>StatusDIWater</th>
+                        <th>DIWater</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Fisa 4</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0 ">15</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Fisa 2</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">14</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Robot</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">13</p>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+      </div>
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <h6 class="card-header bg-dark bg-gradient text-white">Monthly Deionized water</h6>
+                <div id="linechartP5" class="display dataP5" style="height: 18rem;"></div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
+                <table class="display table align-middle mb-0 bg-white">
+                    <thead class="bg-light">
+                      <tr>
+                        <th>Date</th>
+                        <th>Phase</th>
+                        <th>Machine</th>
+                        <th>StatusDIWater</th>
+                        <th>DIWater</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Fisa 4</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0 ">15</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Fisa 2</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">14</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Robot</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">13</p>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+      </div>
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <h6 class="card-header bg-dark bg-gradient text-white">Monthly Deionized water</h6>
+                <div id="linechartP9" class="display dataP9" style="height: 18rem;"></div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
+                <table class="display table align-middle mb-0 bg-white">
+                    <thead class="bg-light">
+                      <tr>
+                        <th>Date</th>
+                        <th>Phase</th>
+                        <th>Machine</th>
+                        <th>StatusDIWater</th>
+                        <th>DIWater</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Fisa 4</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0 ">15</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Fisa 2</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">14</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="text-muted mb-0">17/08/2022</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">Robot</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">control</p>
+                        </td>
+                        <td class="bg-success">
+                          <p class="text-muted mb-0 ">pass</p>
+                        </td>
+                        <td>
+                          <p class="text-muted mb-0">13</p>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+      </div>
 </div>
-<div id="linechartP4" class="display dataP4"></div>
-<div id="linechartP5" class="display dataP5"></div>
-<div id="linechartP9" class="display dataP9"></div>
 
 {% endblock %}
 {% block script %}
