--- a/templates/loginform.html
+++ b/templates/loginform.html
@@ -3,7 +3,8 @@
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-header text-center">
+        <div class="card-header d-flex justify-content-between ">
+          <h5 class="modal-title" id="exampleModalLabel"></h5>
           <h5 class="modal-title" id="exampleModalLabel">LOGIN</h5>
           <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
         </div>
