--- a/templates/add.html
+++ b/templates/add.html
@@ -135,7 +135,7 @@
             <th>Port</th>
             <th>Station</th>
             <th>Phase</th>
-            <th>Machine</th>
+            <th>Site</th>
             <th>Slot water</th>
             <th>Slot Temp</th>
             <th>Edit</th>
