--- a/templates/alert.html
+++ b/templates/alert.html
@@ -16,7 +16,7 @@
           <tr>
             <th>Station</th>
             <th>Phase</th>
-            <th>Machine</th>
+            <th>Site</th>
             <th>Detail</th>
           </tr>
         </thead>
