--- a/templates/setup.html
+++ b/templates/setup.html
@@ -11,11 +11,11 @@
   <h5 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">Monitor And Setup 
     <div class="select-wrapper mb-2 ">
       <select id="selectionGP" class="select select-initialized">
-          <option value="" disabled selected>Choose Phase</option>
+          <option value="" disabled selected>Choose Machine</option>
           <option value="all">All</option>
-          <option value="P4">OP2 Phase 4</option>
-          <option value="P5">OP2 Phase 5</option>
-          <option value="P9">OP2 Phase 9</option>
+          <option value="P4">Machine 01</option>
+          <option value="P5">Machine 02</option>
+          <option value="P9">Machine 03</option>
       </select>
   </div>
   </h5>
