--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,6 +50,8 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/sidebar.css') }}"
     />
+
+    <script src="{{ url_for('static', filename='js/alert.js') }}"></script>
     
     <!--Toast-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
