--- a/templates/alert.html
+++ b/templates/alert.html
@@ -4,6 +4,12 @@
 <!-- script pagination -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.66/vfs_fonts.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
 <!-- css pagination -->
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
 {% endblock %}
@@ -16,12 +22,13 @@
           <tr>
             <th>Station</th>
             <th>Phase</th>
-            <th>Site</th>
+            <th>Machine</th>
             <th>Detail</th>
+            <th>Date</th>
           </tr>
         </thead>
         <tbody>
-          {% for error in error %}
+          {% for error in report %}
           <tr>
             <td>
               <p class="text-muted mb-0">{{ error['Station'] }}</p>
@@ -34,6 +41,9 @@
             </td>
             <td>
               <p class="text-muted mb-0 ">{{ error['Detail'] }}</p>
+            </td>
+            <td>
+              <p class="text-muted mb-0 ">{{ error['Data'] }}</p>
             </td>
           </tr>
           {% endfor %}
@@ -51,6 +61,11 @@
       scrollCollapse: true,
       pageLength: 5,
       lengthMenu: [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ],
+      dom: '<"mb-3"B>lfrtip',
+      buttons: [
+          'excelHtml5',
+          'pdfHtml5'
+      ],
     });
 
 });
