--- a/templates/alert.html
+++ b/templates/alert.html
@@ -7,9 +7,10 @@
 
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.66/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+
+<script src="{{ url_for('node_modules', filename='pdfmake/build/pdfmake.js') }}"></script>
+<script src="{{ url_for('node_modules', filename='pdfmake/build/vfs_fonts.js') }}"></script>
 <!-- css pagination -->
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
 {% endblock %}
@@ -17,7 +18,7 @@
 <div class="card mt-3">
   <h5 class="card-header bg-danger bg-gradient text-white">Alert status</h5>
     <div class="card-body">
-      <table class="display table align-middle mb-0 bg-white">
+      <table class="display table align-middle mb-0 bg-white" id="alert">
         <thead class="bg-light">
           <tr>
             <th>Station</th>
@@ -49,6 +50,7 @@
           {% endfor %}
         </tbody>
       </table>
+      <input id="make-pdf" type="button" onclick="" value="Export To PDF" />
     </div>
 </div>
 {% endblock %}
@@ -59,12 +61,11 @@
       pagingType: 'full_numbers',
       scrollY: '200px',
       scrollCollapse: true,
-      pageLength: 5,
-      lengthMenu: [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ],
+      pageLength: 10,
+      lengthMenu: [ [10, 25, 50, -1], [10, 25, 50, "All"] ],
       dom: '<"mb-3"B>lfrtip',
       buttons: [
-          'excelHtml5',
-          'pdfHtml5'
+          'excelHtml5'
       ],
     });
 
