--- a/templates/line.html
+++ b/templates/line.html
@@ -5,6 +5,10 @@
 <!-- script pagination -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
 <!-- css pagination -->
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
 {% endblock %}
@@ -23,40 +27,54 @@
       </div>
       <div class="card mb-3 mt-3">
         <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
-        
-        <table class="display table align-middle mb-0 bg-white">
-            <thead class="bg-light">
-              <tr>
-                <th>Date</th>
-                <th>Phase</th>
-                <th>Site</th>
-                <th>StatusDIWater</th>
-                <th>DIWater</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for report in report %}
-              <tr>
-                <td>
-                  <p class="text-muted mb-0">{{ report['Date'] }}</p>
-                </td>
-                <td>
-                  <p class="text-muted mb-0">{{ report['Phase'] }}</p>
-                </td>
-                <td>
-                  <p class="text-muted mb-0">{{ report['Site'] }}</p>
-                </td>
-                <td class="bg-success" name="{{ report['Site'] }}">
-                  <p name="{{ report['Site'] }}" class="mb-0 Status{{ report['Site'] }}">Pass</p>
-                </td>
-                <td>
-                  <p class="text-muted mb-0">{{ report['Water'] }}</p>
-                  <input type="hidden" name="data{{ report['Site'] }}"  value="{{ report['Water'] }}">
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+        <div class="card-body p-3">
+          <div class="d-grid gap-2 d-md-block">
+            <button class="mt-1 mb-2  btn btn-danger">
+              <a href="{{ url_for('download_Overview') }}" class="text-white">
+                <i class="fa fa-file-pdf me-1"></i>
+                <span class="me-3">generate pdf</span>
+              </a>
+            </button>
+        </div>
+          
+          <table class="display table align-middle mb-0 bg-white">
+              <thead class="bg-light">
+                <tr>
+                  <th>Date</th>
+                  <th>Phase</th>
+                  <th>Site</th>
+                  <th>Status</th>
+                  <th>DIWater</th>
+                  <th>Temp</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for report in report %}
+                <tr>
+                  <td>
+                    <p class="text-muted mb-0">{{ report['Date'] }}</p>
+                  </td>
+                  <td>
+                    <p class="text-muted mb-0">{{ report['Phase'] }}</p>
+                  </td>
+                  <td>
+                    <p class="text-muted mb-0">{{ report['Site'] }}</p>
+                  </td>
+                  <td class="bg-success" name="{{ report['Site'] }}">
+                    <p name="{{ report['Site'] }}" class="mb-0 Status{{ report['Site'] }}">Pass</p>
+                  </td>
+                  <td>
+                    <p class="text-muted mb-0">{{ report['Water'] }}</p>
+                    <input type="hidden" name="data{{ report['Site'] }}"  value="{{ report['Water'] }}">
+                  </td>
+                  <td>
+                    <p class="text-muted mb-0">{{ report['Temp'] }}</p>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+        </div>
       </div>
     </div>  
 </div>
@@ -65,9 +83,9 @@
 {% block script %}
 <script>
   {% for reportscript in report %}
-  if ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() > 12){
+  if ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() >= 12){
     $('p[name="{{ reportscript['Site'] }}"]').text("Pass");
-  } else if ((10 < $( 'input[name="data{{ reportscript['Site'] }}"]' ).val()) && ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() < 12)) {
+  } else if ((10 <= $( 'input[name="data{{ reportscript['Site'] }}"]' ).val()) && ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() < 12)) {
     $('p[name="{{ reportscript['Site'] }}"]').text("Monitor");
     $('td[name="{{ reportscript['Site'] }}"]').removeClass("bg-success");
     $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-warning");
@@ -86,6 +104,14 @@
       scrollCollapse: true,
       pageLength: 20,
       lengthMenu: [ [20, 30, 40, 50, -1], [20, 30, 40, 50, "All"] ],
+      dom: 'Blfrtip',
+      buttons: [
+        {
+          extend: 'excel',
+          text: '<i class="fa fa-file-excel me-2"></i><span>generate excel</span>',
+          className: 'mb-3 btn btn-success me-1',
+        }
+    ],
     });
 });
 </script>
